--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [features]
 build-gmp = ["dep:gmp-mpfr-sys"]
 rerun-bindgen = ["dep:bindgen"]
+use-system-flint = ["rerun-bindgen"]
+use-system-gmp = []
 
 [dependencies]
 gmp-mpfr-sys = { version = "1.6.4", optional = true }
