--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ links = "flint"
 [features]
 build-gmp = ["dep:gmp-mpfr-sys"]
 rerun-bindgen = ["dep:bindgen"]
-use-system-flint = ["rerun-bindgen"]
-use-system-gmp = []
+gmp-mpfr-sys = ["dep:gmp-mpfr-sys"]
 
 [dependencies]
 gmp-mpfr-sys = { version = "1.6.4", optional = true }
