--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 
 
 [features]
-rerun-bindgen = ["dep:bindgen"]
+rerun-bindgen = ["dep:bindgen", "dep:regex"]
 gmp-mpfr-sys = ["dep:gmp-mpfr-sys"]
 
 [dependencies]
@@ -18,3 +18,4 @@ gmp-mpfr-sys = { version = "1.6.4", optional = true }
 anyhow = "1.0.98"
 bindgen = { version = "0.71.1", optional = true }
 cc = "1.2.23"
+regex = { version = "1.11.1", default-features = false, features = ["std"], optional = true }
