--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "flint3-sys"
 description = "Rust bindings to the FLINT C library"
-version = "3.2.2"
+version = "3.2.2-1"
 repository = "https://github.com/lairez/flint3-sys"
 edition = "2021"
 links = "flint"
