--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "flint3-sys"
 description = "Rust bindings to the FLINT C library"
-version = "3.2.3"
+version = "3.2.4"
 repository = "https://github.com/lairez/flint3-sys"
 edition = "2021"
 links = "flint"
@@ -22,3 +22,6 @@ anyhow = "1.0.98"
 bindgen = { version = "0.71.1", optional = true }
 cc = "1.2.23"
 regex = { version = "1.11.1", default-features = false, features = ["std"], optional = true }
+
+[package.metadata.docs.rs]
+features = ["gmp-mpfr-sys"]     # docs.rs does not have libgmp-dev
